# sol

./: .gitignore  Anchor.toml  Cargo.toml  ENVIRONMENT_SETUP.md  FEATURES.md  mpl_token_metadata-keypair.json  package-lock.json  package.json  test-program.js
programs/slot_machine/: Cargo.toml
programs/slot_machine/src/: lib.rs  lib_original_backup.rs
programs/slot_machine/tests/: fake_pool_risk.rs  withdraw_commission.rs
programs/slot_machine_token/: Cargo.toml
programs/slot_machine_token/src/: token.rs
scripts/: slot_machine_bet_devnet.js  slot_machine_close_game_devnet.js  slot_machine_ev_simulate.js  slot_machine_predict_play_devnet.js  slot_machine_verify_play_tx.js  test-all.sh
tests/: slot_machine_optimized.ts  strategy_combo_bet_ev.ts  token_smoke.ts  zz_instruction_gaps.spec.ts  zz_predictability_exploit.spec.ts  zz_rng_weights_payouts.spec.ts
