[package]
name = "slot_machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "slot_machine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"

[patch.crates-io]
anchor-syn = { version = "=0.30.1" }

[dev-dependencies]
solana-program = "=1.18.26"
solana-program-test = "=1.18.26"
solana-sdk = "=1.18.26"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
