[package]
name = "slot_machine_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "slot_machine_token"
path = "src/token.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[lints.rust]
unexpected_cfgs = "allow"

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
mpl-token-metadata = "=5.1.1"
